Part 2 of 2 UI Changes for presentation. Minor changes to be made afterwards to correct alignment behavior, but good enough for the demo.

--- a/layout.css
+++ b/layout.css
@@ -2,6 +2,7 @@ html, body {
 	margin: 0px;
 	padding: 0px;
 	background-color: #0b2a50;
+	min-width:900px;
 	width: 100%;
 	height: 100%;
 	font-family: Tahoma, Geneva, sans-serif;
@@ -15,7 +16,6 @@ html, body {
 }
 
 #ContentRegion {
-	float:center;
 	margin-left: 12px;
 	margin-right: 12px;
 	min-height:100%;
@@ -24,7 +24,6 @@ html, body {
 }
 
 #ContentNormal{
-	display: block;
 	padding: 12px;
 }
 
@@ -44,9 +43,7 @@ html, body {
 #ContentAnnotation {
 	margin-left:688px;
 	width:200px;
-	
 }
-
 
 #IntroParagraph {
 	margin: auto;
