--- a/table.css
+++ b/table.css
@@ -1,25 +1,14 @@
-/* 
-body {
-    background: #f8f8f8;
-    font-family: Tahoma, Geneva, sans-serif;
-    text-align: center;
-    color: #fff;
-}
-
-.page-container {
-    float:left;
-    overflow: hidden;
-    width: auto;
-    margin: 10px auto 0 auto;
+ 
+.container {
+	display: inline-flex;
+	flex-wrap: wrap;
+	text-align: center;
     padding-bottom: 10px;
 }
-*/
-
 
 .pricing-table {
-    float: left;
-    width: 200px;
-    margin: 25px 10px 0 10px;
+    width: 260px;
+    margin: 10px 16px 10px 16px;
     background: #f8f8f8;
     -moz-border-radius: 6px;
     -webkit-border-radius: 6px;
@@ -31,7 +20,7 @@ body {
 
 .pricing-table:hover {
     background: #7795bf;
-    color:#fff;
+    color:#ffffff;
 }
 
 .pricing-table strong { font-weight: 700; color: #3d3d3d; }
@@ -59,8 +48,7 @@ body {
 .pricing-table-space { height: 10px; }
 
 .pricing-table-text {
-    margin: 15px 30px 0 30px;
-    padding: 0 10px 15px 10px;
+    margin: 15px 30px 0 30px;    padding: 0 10px 15px 10px;
     border-bottom: 1px solid #ddd;
     text-align: left;
     line-height: 30px;
@@ -69,8 +57,7 @@ body {
 }
 
 .pricing-table-features {
-    margin: 15px 10px 0 10px;
-    padding: 0 10px 15px 10px;
+    margin: 15px 10px 0 10px;    padding: 0 10px 15px 10px;
     border-bottom: 1px solid #ddd;
     text-align: left;
     line-height: 30px;
@@ -85,6 +72,7 @@ body {
 .pricing-table-sign-up {
     margin-top: 25px;
     padding-bottom: 30px;
+
 }
 
 .pricing-table-sign-up a {
